--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,36 @@
 .results-block {
   display: inline-block;
 }
+.no-padding {
+  padding: 0 !important;
+}
+
+.left-padding {
+  padding-left: 15px !important;
+}
+.logout {
+  padding-left: 0 ;
+}
+.user-name {
+  padding-top: 15px;
+}  
+.nav.navbar-right li {
+  .btn {
+    color: #fff !important;
+    margin-top: 5%;
+  }
+  
+  .btn-danger:hover {
+    background-color: darken(#d9534f, 20%) !important;
+  }
+}
+.home-padding {
+  padding: 20 !important;
+}
+.btn-xl {
+        font-size: 22px;
+        padding: 10px 16px;
+        border-radius: 6px;
+        margin-left: auto;
+        margin-right: auto;
+    }
