add friends search and display page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,7 +13,7 @@
   </div>
   <div class="col-md-4 home-padding">
 
-      <%= link_to 'My Portfolio', my_portfolio_path, class: "btn btn-xl btn-info" %>
+      <%= link_to 'My Friends', my_friends_path, class: "btn btn-xl btn-info" %>
 
   </div>
   <br>
